Mahout Change Log

Release 1.0 - unreleased

  MAHOUT-1537: Minor fixes to spark-shell (Anand Avati via dlyubimov)

  MAHOUT-1529: Finalize abstraction of distributed logical plans from backend operations (dlyubimov)

  MAHOUT-1489: Interactive Scala & Spark Bindings Shell & Script processor (dlyubimov)

  MAHOUT-1346: Spark Bindings (DRM) (dlyubimov)

  MAHOUT-1555: Exception thrown when a test example has the label not present in training examples (Karol Grzegorczyk via smarthi)

  MAHOUT-1446: Create an intro for matrix factorization (Jian Wang via ssc)

  MAHOUT-1480: Clean up website on 20 newsgroups (Andrew Palumbo via ssc)
  
  MAHOUT-1561: cluster-syntheticcontrol.sh not running locally with MAHOUT_LOCAL=true (Andrew Palumbo via ssc)

  MAHOUT-1558: Clean up classify-wiki.sh and add in a binary classification problem (Andrew Palumbo via ssc)

  MAHOUT-1560: Last batch is not filled correctly in MultithreadedBatchItemSimilarities (Jarosław Bojar)

  MAHOUT-1554: Provide more comprehensive classification statistics (Karol Grzegorczyk via ssc)

  MAHOUT-1548: Fix broken links in quickstart webpage (Andrew Palumbo via ssc)

  MAHOUT-1542: Tutorial for playing with Mahout's Spark shell (ssc)

  MAHOUT-1533: Remove Frequent Pattern Mining (ssc)

  MAHOUT-1532: Add solve() function to the Scala DSL (ssc)

  MAHOUT-1530: Custom prompt and welcome message for the Spark Shell (ssc)

  MAHOUT-1527: Fix wikipedia classifier example (Andrew Palumbo via ssc)

  MAHOUT-1526: Ant file in examples (ssc)

  MAHOUT-1523: Remove @author tags in sparkbindings (ssc)

  MAHOUT-1521: lucene2seq - Error trying to load data from stored field (when non-indexed) (Terry Blankers via frankscholten)

  MAHOUT-1520: Fix links in Mahout website documentation (Saleem Ansari via smarthi)

  MAHOUT-1519: Remove StandardThetaTrainer (Andrew Palumbo via ssc)

  MAHOUT-1517: Remove casts to int in ALSWRFactorizer (ssc)
  
  MAHOUT-1513: Deprecate Canopy Clustering (ssc)
